# packaging_tutorial

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: check-packaging.yml  pre-commit.yml  release.yml  test.yml
src/sample/: __init__.py  cli.py
tests/: test_cli.py  test_simple.py
