# Specifications for this file are in https://packaging.python.org/specifications/core-metadata
[project]
name = "example_package_daemo"  # Required
dynamic = ["version"]
description = "A sample Python project"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
keywords = [
  "sample",
  "development",
]
authors = [
  {name = "Simone Rubino", email = "daemo00@gmail.com"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "peppercorn",
]

[project.optional-dependencies]
dev = [
  "check-manifest",
]
test = [
  "coverage",
]

[project.urls]
"Homepage" = "https://github.com/Daemo00/packaging_tutorial"
"Bug Reports" = "https://github.com/Daemo00/packaging_tutorial/issues"
"Funding" = "https://donate.pypi.org"
"Say Thanks!" = "http://saythanks.io/to/daemo00"
"Source" = "https://github.com/Daemo00/packaging_tutorial"

[project.scripts]
sample = "sample:main"

[tool.setuptools]
package-data = {sample = ["*.dat"]}

[tool.setuptools_scm]
write_to = "src/sample/__version__.py"

[build-system]
requires = [
  "setuptools>=45",
  "setuptools_scm[toml]>=6.2",
  "wheel",
]
build-backend = "setuptools.build_meta"
